<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fada.menuhelp.Slide1Fragment"
    android:background="#0ababa">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_gravity= "center_horizontal"
        android:drawSelectorOnTop="true"
        android:typeface="serif"
        android:ems="6"
        android:text="@string/bienvenid_a"
        android:longClickable="false"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:layout_marginTop="80dp"
        android:scrollbars = "vertical"/>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_gravity= "center"
        android:drawSelectorOnTop="true"
        android:typeface="serif"
        android:ems="6"
        android:text="@string/almacena_todos_tus_tickets_y_boletos_para_val_darlos_usando_tu_identificaci_n_personal_y_nica"
        android:longClickable="false"
        android:textStyle="italic"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:layout_marginTop="100dp"
        android:scrollbars = "vertical"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="208dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/tingo_logo"
        android:contentDescription="@string/mant_n_tus_tickets_siempre_a_mano" />



</FrameLayout>
