<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fada.menuhelp.Slide3Fragment"
    android:background="#f3974a">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity= "center_horizontal"
        android:drawSelectorOnTop="true"
        android:typeface="serif"
        android:ems="8"
        android:text="@string/ahora_lo_que_tienes_es_un_tinket_la_manera_que_tiene_tingoid_para_cuidar_y_gestionar_tus_adquisiciones"
        android:longClickable="false"
        android:textStyle="italic"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="80dp"
        android:textSize="18sp"
        android:scrollbars = "vertical"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="162dp"
        android:layout_height="119dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        app:srcCompat="@mipmap/ic_tingo"
        android:contentDescription="@string/botones_registro_e_iniciar_sesi_n" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity= "center"
        android:drawSelectorOnTop="true"
        android:typeface="serif"
        android:ems="8"
        android:text="@string/cada_vez_que_almacenes_una_nueva_compra_la_podr_s_visualizar_en_tus_tinkets_disponibles_donde_adem_s_puedes_revisar_los_detalles_asociados"
        android:longClickable="false"
        android:textStyle="italic"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:scrollbars = "vertical"/>
</FrameLayout>
