<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fada.menuhelp.Slide4Fragment"
    android:background="#ddeeee">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity= "center"
        android:drawSelectorOnTop="true"
        android:typeface="serif"
        android:ems="5"
        android:text="@string/tienes_un_lapso_de_5_minutos_para_efectuar_la_transacci_n_ntranquilo_puedes_mostrarlo_las_veces_que_quieras"
        android:longClickable="false"
        android:textStyle="italic"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:scrollbars = "vertical"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        app:srcCompat="?android:attr/actionModeSelectAllDrawable"
        android:contentDescription="@string/qr_personal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:drawSelectorOnTop="true"
        android:ems="5"
        android:gravity="center"
        android:longClickable="false"
        android:scrollbars="vertical"
        android:text="@string/cuando_est_s_en_la_fila_para_validar_tu_entrada_o_boleta_abre_la_opci_n_mostrar_tinket_para_que_generes_tu_qr_de_identificaci_n_personal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="serif" />

</FrameLayout>
